# biometric-face-preprocessor

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: publish.yml
pipeline_models/: __init__.py  biometric_pipeline.py  camera_video_input.py  face_geometric_normalizer.py  file_video_input.py  frame_preprocessor.py  mediapipe_face_detector.py  temporal_landmarks_smoother.py
pipeline_models/interfaces/: __init__.py  face_detector.py  pipeline_context.py  pipeline_step.py  video_input.py
