[project]
name = "biometric-face-preprocessor"
dynamic = ["version"]
description = "Пайплайн предобработки видео для НПБК по ГОСТ Р 52633"
authors = [{ name = "KuznetsovMR", email = "marselkuznetsov@yandex.ru" }]
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "mediapipe>=0.10",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
