[project]
name = "biometric-face-preprocessor"
dynamic = ["version"]
description = "Пайплайн предобработки видео для НПБК по ГОСТ Р 52633"
authors = [{ name = "KuznetsovMR", email = "marselkuznetsov@yandex.ru" }]
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "mediapipe>=0.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",      # быстрый линтер + форматтер
    "black>=24.8.0",    # красивый форматтер
    "mypy>=1.11.0",     # проверка типов
    "pytest>=8.0",      # тесты
    "pytest-cov>=5.0",  # покрытие кода
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
py-modules = ["_version"]   # ← КЛЮЧЕВОЕ ИСПРАВЛЕНИЕ

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]